--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <header>
       <div class="header_img flex_column_center">
-        <img src="img/profile.png" alt="Profile Picture" />
+        <img src="img/profile.jpg" alt="Profile Picture" />
       </div>
       <div class="header_text flex_column_center">
         <h1 class="header_h_item">Ed Clairmont</h1>
@@ -64,4 +64,5 @@
     </footer>
 
   </body>
+  
 </html>
