removed some formatting

--- a/index.html
+++ b/index.html
@@ -51,11 +51,8 @@
 		  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Varius morbi enim nunc faucibus a pellentesque sit amet porttitor. In eu mi bibendum neque egestas. Pellentesque massa placerat duis ultricies. Nulla malesuada pellentesque elit eget gravida cum sociis natoque. Dictum fusce ut placerat orci nulla pellentesque dignissim enim sit. Semper risus in hendrerit gravida rutrum quisque non tellus. Donec enim diam vulputate ut pharetra sit. Bibendum arcu vitae elementum curabitur vitae nunc sed velit dignissim. Commodo viverra maecenas accumsan lacus.
 		  </p>
         </div>
-      </section>
-	  
-	  <section id="main_section_container_2" class="flex_column_center">
-        <!-- Overview Text-->
-        <div class="main_text_item">
+		<!-- Overview Skills-->
+		<div class="main_text_item">
            <ul>
 			<li>Hashistack</li>
 				<ul>
@@ -96,14 +93,6 @@
         </div>
       </section>
 	  
-	  <section id="main_section_container_3" class="flex_column_center">
-        <!-- Overview Text-->
-        <div class="main_text_item">
-          <p>
-		  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Varius morbi enim nunc faucibus a pellentesque sit amet porttitor. In eu mi bibendum neque egestas. Pellentesque massa placerat duis ultricies. Nulla malesuada pellentesque elit eget gravida cum sociis natoque. Dictum fusce ut placerat orci nulla pellentesque dignissim enim sit. Semper risus in hendrerit gravida rutrum quisque non tellus. Donec enim diam vulputate ut pharetra sit. Bibendum arcu vitae elementum curabitur vitae nunc sed velit dignissim. Commodo viverra maecenas accumsan lacus.
-		  </p>
-        </div>
-      </section>
       <!-- Overview Container End -->
 
 
